--- a/ppt/03.htm
+++ b/ppt/03.htm
@@ -35,7 +35,7 @@
 </ol>
 
 </article></section></slide>
-<slide class="slide" style="background:url(/img/02/html.jpg) left 20% no-repeat; background-size:100%"  data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><div class="magic"><div class="magicItem current pagedown"  data-transition="earthquake"><article>
+<slide class="slide" style="background:url(./img/02/html.jpg) left 20% no-repeat; background-size:100%"  data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><div class="magic"><div class="magicItem current pagedown"  data-transition="earthquake"><article>
 <div class="magic-wrapper">
 <article>
 <h2>html简介</h2>
@@ -68,11 +68,11 @@
 </article>
 </div>
 </article></div></div></section></slide>
-<slide class="slide" style="background:#fff url(/img/03/html5Timeline.png) left bottom no-repeat; background-size:100%"><section class="slide-wrapper"><article>
+<slide class="slide" style="background:#fff url(./img/03/html5Timeline.png) left bottom no-repeat; background-size:100%"><section class="slide-wrapper"><article>
 <h2>html历史</h2>
 
 </article></section></slide>
-<slide class="slide" style="background:#fff url(/img/03/html5Feature.png) left center no-repeat; background-size:100%"><section class="slide-wrapper"><article>
+<slide class="slide" style="background:#fff url(./img/03/html5Feature.png) left center no-repeat; background-size:100%"><section class="slide-wrapper"><article>
 <h2>html5特性</h2>
 
 </article></section></slide>
@@ -231,7 +231,7 @@
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
 <h1>网页设计与制作</h1>
 <h2>旨为前端开发工程师的前端开发基础课程</h2>
-<p><small style="vertical-align:middle;display:inline-block"><iframe src="https://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="http://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="http://ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small></p>
+<p><small style="vertical-align:middle;display:inline-block"><iframe src="///ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="///ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20" style="width:110px;height:20px;  background-color: transparent;"></iframe><iframe src="///ghbtns.com/github-btn.html?user=zptcsoft&repo=zptcsoft.github.io&type=follow&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20" style="width:170px;height:20px;  background-color: transparent;"></iframe></small></p>
 
 </article></section></slide>
         
