--- a/ppt/06.htm
+++ b/ppt/06.htm
@@ -69,7 +69,7 @@
     </tr>
     <tr>
         <td>文本级<br>Text-level semantics</td>
-        <td>span, a, em, strong, q, cite, mark, i, b, u, s, sup, sub, big, small, var, code, samp, data, time, ruby, rb, rp, rt, rtc, bdi, bdo, dfn, dbd, br, wbr</td>
+        <td>span, a, em, strong, q, cite, mark, i, b, u, s, sup, sub, big, small, var, code, samp, kbd, data, time, ruby, rb, rp, rt, rtc, bdi, bdo, dfn, br, wbr</td>
     </tr>
     <tr>
         <td>编辑 Edits</td>
@@ -217,7 +217,7 @@
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vleft">
 
 <h2>meta元素</h2>
-<p><table class="thin tag">
+<table class="thin tag">
     <tr>
         <th>类型</th><th>取值</th>
     </tr>
@@ -243,11 +243,7 @@
             charset属性，设置编码方式
         </td>
     </tr>
-</table></p>
-<blockquote>
-<p>base元素可以指定文档基准URL和基准target</p>
-</blockquote>
-
+</table>
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article>
 <h2>meta元素示例</h2>
