--- a/ppt/10.htm
+++ b/ppt/10.htm
@@ -140,7 +140,7 @@
 &lt;!-- target=&quot;_top&quot;，链接所在文件的顶端窗口(也即整个浏览器窗口)中打开链接 --&gt;
 &lt;a href=&quot;//www.baidu.com/s?wd=whqet&quot; target=&quot;_top&quot;&gt;whqet&lt;/a&gt;
 </code></pre>
-<p><a href="///zptc.github.io/demo/link.html" target="_blank">实例文件</a></p>
+<p><a href="///zptcsoft.github.io/demo/link.html" target="_blank">实例文件</a></p>
 
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
