--- a/demo/linkb.html
+++ b/demo/linkb.html
@@ -7,7 +7,12 @@
 <body>
 	linkb.html
 	<hr>
-	<a href="//www.baidu.com/s?wd=whqet" target="_parent">target="_parent"，在父元素中打开链接</a>
-	<a href="//www.baidu.com/s?wd=whqet" target="_top">target="_top"，清除所有框架，在整个浏览器中打开链接</a>
+	<ol>
+		<li><a href="//www.baidu.com/s?wd=whqet">不设置target，本窗口打开链接</a> </li>
+		<li><a href="//www.baidu.com/s?wd=whqet" target="_self">target="_self"，本窗口打开链接</a></li>
+		<li><a href="//www.baidu.com/s?wd=whqet" target="abc">target="abc"，框架abc中打开链接</a></li>
+		<li><a href="//www.baidu.com/s?wd=whqet" target="_parent">target="_parent"，在父元素中打开链接</a></li>
+		<li><a href="//www.baidu.com/s?wd=whqet" target="_top">target="_top"，清除所有框架，在整个浏览器中打开链接</a></li>
+	</ol>
 </body>
 </html>
