--- a/demo/menu.html
+++ b/demo/menu.html
@@ -49,6 +49,7 @@
             -webkit-flex-basis: 50%;
             -ms-flex-preferred-size: 50%;
             flex-basis: 50%;
+            border-right:1px solid #ddd;
         }
     }
     
