add ppt11 and ppt 12

--- a/ppt/06.htm
+++ b/ppt/06.htm
@@ -41,8 +41,7 @@
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article>
 <h2><a href="///w3school.com.cn/tags/html_ref_byfunc.asp" target="_blank">元素概述</a></h2>
-<img src="./img/03/Periodic-Table-of-HTML-Elements-large.png" alt="">
-
+<iframe class="widder" src="///zptcsoft.github.io/html5-elements-periodic-table/" frameborder="0"></iframe>
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vleft">
 
