--- a/ppt/demos/editor.html
+++ b/ppt/demos/editor.html
@@ -81,17 +81,18 @@
         font-size: 15px;
     }
     #themeBtn{
-        right: 82px;
+        right: 102px;
     }
     #downBtn{
-        right: 2px;
+        right: 22px;
+        border-right: 1px solid rgba(100,100,100,.4);
     }
     #openBtn{
         opacity: 0;
         display: none;
     }
     #openBtnLabel{
-        right: 42px;
+        right: 62px;
         cursor: pointer;
     }
     </style>
