--- a/ppt/12.htm
+++ b/ppt/12.htm
@@ -544,9 +544,12 @@
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vleft">
 
 <h2>表格综合实例</h2>
-<h3><a href="demos/editor.html?file=table01" target="_blank">细线表格</a></h3>
-<h3><a href="demos/editor.html?file=table01" target="_blank">隔行变色表格</a></h3>
-<h3><a href="demos/editor.html?file=table01" target="_blank">十字变色表格</a></h3>
+<h3><a href="./demos/editor.html?file=table01" target="_blank">细线表格</a></h3>
+<h3><a href="./demos/editor.html?file=table02" target="_blank">隔行变色表格</a></h3>
+<h3><a href="./demos/editor.html?file=table03" target="_blank">渐变背景色表格</a></h3>
+<blockquote>
+<p>CSS美化表格详解第16讲</p>
+</blockquote>
 
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
