--- a/ppt/demos/table02.html
+++ b/ppt/demos/table02.html
@@ -32,7 +32,7 @@
         .stripe tbody tr:hover td{
             color: hsl(300,100%,50%);
         }
-        td:last-child{
+        .stripe tfoot td{
             text-align: left;
             color: rgba(0,0,0,.2);
         }
