--- a/ppt/demos/table03.html
+++ b/ppt/demos/table03.html
@@ -41,7 +41,7 @@
             cursor: pointer;
             color: hsl(300,100%,50%);
         }
-        tfoot td{
+        .gradient tfoot td{
             text-align: left;
             color: rgba(0,0,0,.2);
         }
