--- a/ppt/demos/table01.html
+++ b/ppt/demos/table01.html
@@ -22,7 +22,7 @@
         text-align: center;
         padding: 5px;
     }
-    tfoot td{
+    .thin tfoot td{
         text-align: left;
         color: rgba(0,0,0,.2);
     }
