--- a/ppt/demos/border.html
+++ b/ppt/demos/border.html
@@ -18,7 +18,7 @@
 			.show {
 				padding: 10px;
 			}
-			.show demo{
+			.show .demo{
 				width:200px;
 				height:200px;
 			}
@@ -57,7 +57,7 @@
 			<div class="show" flex="70" layout="column">
 				<h2>预览区</h2>
 				<p>拖动滑动条之后，在这里预览表格变化</p>
-				<div class="demo" style="border-width:{{width}};border-style:{{style}};border-color:{{color}}">
+				<div class="demo" style="border-width:{{width}}px;border-style:{{style}};border-color:{{color}}">
 				</div>
 			</div>
 		</div>
