--- a/ppt/demos/border.html
+++ b/ppt/demos/border.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>表格属性试验场</title>
+		<title>border属性试验场</title>
 		<link rel="stylesheet" href="lib/angular/angular-material.css">
 		<style type="text/css">
 			body {
@@ -36,7 +36,7 @@
 				</div>
 				<div layout="row" layout-align="center center">
 					<div flex="40">border-style: {{style}}</div>
-					<md-select flex="60" ng-model="frame" aria-label="align">
+					<md-select flex="60" ng-model="style" aria-label="align">
 						<md-option>none</md-option>
 						<md-option>hidden</md-option>
 						<md-option>dotted</md-option>
