--- a/ppt/13.htm
+++ b/ppt/13.htm
@@ -114,8 +114,7 @@ p{
 </ol>
 
 </article></section></slide>
-<slide class="slide" style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) right center no-repeat;background-size:100%" ><section class="slide-wrapper"><article class="flexbox vleft">
-
+<slide class="slide" style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) center center no-repeat;background-size:contain" ><section class="slide-wrapper"><article>
 <h2>css现状</h2>
 
 </article></section></slide>
