--- a/ppt/13.htm
+++ b/ppt/13.htm
@@ -102,6 +102,12 @@ p{
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vleft">
 
 <h2>css历史</h2>
+<ol>
+<li>1996.12.17, css1发布</li>
+<li>1998.05.12，css2发布</li>
+<li>2011.06.17，CSS2.1发布</li>
+<li>css3将CSS划分为小的模块逐个开发，目前进度不一。</li>
+</ol>
 
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vleft">
@@ -115,7 +121,7 @@ p{
 
 </article></section></slide>
 <slide class="slide" style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) center center no-repeat;background-size:contain" ><section class="slide-wrapper"><article>
-<h2>css现状</h2>
+<h2><a href="///www.w3.org/TR/css-2015/" target="_blank">css现状</a></h2>
 
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
