--- a/ppt/13.htm
+++ b/ppt/13.htm
@@ -121,7 +121,7 @@ p{
 
 </article></section></slide>
 <slide class="slide" style="background:#25A1E1 url(./img/13/CSS3_taxonomy_and_status-v2.png) center center no-repeat;background-size:contain" ><section class="slide-wrapper"><article>
-<h2><a href="///www.w3.org/TR/css-2015/" target="_blank">css现状</a></h2>
+<h2><a href="///www.w3.org/Style/CSS/current-work" target="_blank">css现状</a></h2>
 
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
